# PersonaVerseDjango

./: .gitignore  README.md  pyproject.toml
persona_verse/: manage.py
persona_verse/common/: environment.py  setup.py
persona_verse/config/: asgi.py  settings.py  urls.py  wsgi.py
persona_verse/persona_mbti/: apps.py  models.py  serializers.py  views.py
