[tool.poetry]
name = "personaverse-django"
version = "0.1.0"
description = ""
authors = ["isac7722 <isac7722@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.5"
openai = "^1.59.7"
langgraph = "^0.2.62"
langchain = "^0.3.14"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
django-cors-headers = "^4.6.0"
beanie = "^1.29.0"
motor = "^3.6.1"
pydantic = "^2.10.5"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
